--- a/mobile/ObucApp/package.json
+++ b/mobile/ObucApp/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -17,17 +18,22 @@
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^4.1.1",
+    "phosphor-react-native": "^2.2.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.9",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.6.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "babel-plugin-module-resolver": "^5.0.2",
+    "react-native-svg-transformer": "^1.5.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.1.3"
   },
