--- a/mobile/ObucApp/package.json
+++ b/mobile/ObucApp/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.5",
@@ -22,6 +23,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
+    "react-native-device-info": "^11.1.0",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.9",
