feat: deploy backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "nodemon -r dotenv/config src/index.ts"
+    "build": "tsup src",
+    "start": "nodemon -r dotenv/config dist/index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -10,7 +11,8 @@
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "tsup": "^8.2.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
