--- a/mobile/ObucApp/package.json
+++ b/mobile/ObucApp/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "start": "npx react-native start --reset-cache"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -16,6 +13,7 @@
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.5",
     "babel-preset-expo": "11.0.14",
+    "dotenv": "^16.4.5",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^4.1.1",
@@ -24,6 +22,7 @@
     "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
     "react-native-device-info": "^11.1.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.9",
